# icloudpd

./: .gitignore  Dockerfile  Dockerfile.from_repo  Dockerfile.local  LICENSE  README.md  logging-config.json  pyproject.toml  requirements.txt  setup.py
icloudpd/: authentication.py  base.py  database.py  download.py
scripts/: build.all.sh  build.docker.local.sh  build.docker.repo.sh  build.install.sh  build.local.sh  build.sh  build_docker.from_repo  build_docker.local  install.sh
src/: constants.py  context.py  download.py  icloudpd.py  meta_data.py  photo_manager.py
src/database/: database.py
src/icloud/: authentication.py
src/logger/: logger.py
src/utils/: email_notifications.py  misc.py  paths.py  thread_safe.py
